# mailchimp-haskell

./: .travis.yml  CHANGELOG.md  LICENSE.md  README.md  circle.yml  mailchimp.cabal  stack.yaml
.circleci/: config.yml
src/Web/: MailChimp.hs  Mailchimp.hs
src/Web/MailChimp/: Common.hs  Extra.hs  Key.hs  List.hs  Tutorial.hs
src/Web/MailChimp/List/: Member.hs
src/Web/Mailchimp/: Common.hs  Extra.hs  Key.hs  List.hs  Tutorial.hs
src/Web/Mailchimp/List/: Member.hs
test/Web/: MailChimpSpec.hs  MailchimpSpec.hs
