name: mailchimp
version: 0.1.0

build-type: Simple
cabal-version: >= 1.10

license: MIT
license-file: LICENSE.md

copyright: 2016 Juan Pedro Villa Isaza
author: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>
maintainer: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>

bug-reports: https://github.com/jpvillaisaza/mailchimp-haskell/issues

synopsis: Haskell bindings for the MailChimp API
description: Haskell bindings for the MailChimp API.

category: Web

library
  hs-source-dirs:
      src
  exposed-modules:
      Web.MailChimp
      Web.MailChimp.Key
      Web.MailChimp.List
      Web.MailChimp.List.Member
      Web.MailChimp.Tutorial
  build-depends:
      aeson >= 0.11 && < 0.12
    , attoparsec >= 0.13 && < 0.14
    , base >= 4.8 && < 4.10
    , bytestring
    , http-client >= 0.4 && < 0.5
    , http-client-tls >= 0.2 && < 0.3
    , servant >= 0.7 && < 0.8
    , servant-client >= 0.7 && < 0.8
    , text >= 1.2 && < 1.3
    , transformers
  default-language:
      Haskell2010
  ghc-options:
      -Wall


source-repository head
  type: git
  location: https://github.com/jpvillaisaza/mailchimp-haskell
