name: mailchimp
version: 0.3.0

build-type: Simple
cabal-version: >= 1.21

license: MIT
license-file: LICENSE.md

copyright: 2016 Juan Pedro Villa Isaza
author: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>
maintainer: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>

stability: Experimental

homepage: https://github.com/jpvillaisaza/mailchimp-haskell
bug-reports: https://github.com/jpvillaisaza/mailchimp-haskell/issues

synopsis: Bindings for the MailChimp API
description: Haskell bindings for the MailChimp API.

category: Web

tested-with: GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2

extra-source-files:
  CHANGELOG.md
  README.md

library
  hs-source-dirs:
      src
  exposed-modules:
      Web.MailChimp
      Web.MailChimp.Common
      Web.MailChimp.Extra
      Web.MailChimp.Key
      Web.MailChimp.List
      Web.MailChimp.List.Member
      Web.MailChimp.Tutorial
  other-modules:
      Paths_mailchimp
  build-depends:
      aeson
    , attoparsec
    , base >= 4.9
    , bytestring
    , http-client
    , http-client-tls
    , servant >= 0.16
    , servant-client
    , servant-client-core
    , text
    , transformers
  default-language:
      Haskell2010
  ghc-options:
      -Wall

test-suite sd
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
      Web.MailChimpSpec
  build-depends:
      base
    , hspec
    , mailchimp
  default-language:
      Haskell2010

source-repository head
  type: git
  location: https://github.com/jpvillaisaza/mailchimp-haskell
